--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
   </body>
 </html>
